--- a/ConsoleApp/ConsoleApp.csproj
+++ b/ConsoleApp/ConsoleApp.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
+    <Compile Include="Bot.cs" />
     <Compile Include="Cell.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Player.cs" />
